resolved the issues

--- a/broad-cast_routing/index.html
+++ b/broad-cast_routing/index.html
@@ -82,14 +82,14 @@
     <div class="logo">Routing Algorithms</div>
     <nav>
         <ul>
-             <li><a class="nav_link" href="/home/rupali/project2/integration.html">Home</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/dijkstra_algo/intro.html">Dijkstra</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/distance-vector_routing/intro.html">Distance Vector</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/flooding/intro.html">Flooding</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/link-state_routing/intro.html">Link State</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/broad-cast_routing/intro.html">Broadcast</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/multi-state_routing/intro.html">Multicast</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/hierarchical-routing/intro.html">Hierarchical Routing</a></li>
+            <li><a class="nav_link" href="../integration.html">Home</a></li>
+            <li><a class="nav_link" href="../dijkstra_algo/intro.html">Dijkstra</a></li>
+            <li><a class="nav_link" href="../distance-vector_routing/intro.html">Distance Vector</a></li>
+            <li><a class="nav_link" href="../flooding/intro.html">Flooding</a></li>
+            <li><a class="nav_link" href="../link-state_routing/intro.html">Link State</a></li>
+            <li><a class="nav_link" href="/intro.html">Broadcast</a></li>
+            <li><a class="nav_link" href="../multi-state_routing/intro.html">Multicast</a></li>
+            <li><a class="nav_link" href="..s/hierarchical-routing/intro.html">Hierarchical Routing</a></li>
         </ul>
     </nav>
 </header>
@@ -111,10 +111,10 @@
 <!-- Updated Buttons for Broadcasting Algorithms -->
 <h2>Select Broadcasting Method:</h2>
 <div id="broadcast-methods">
-    <a href="/home/rupali/project2/broad-cast_routing/pointToPoint.html"><button id="point-to-point">Point-to-Point Transmission</button></a>
-    <a href="/home/rupali/project2/broad-cast_routing/flooding.html"><button id="flooding">Flooding</button></a>
-    <a href="/home/rupali/project2/broad-cast_routing/spanningTree.html"><button id="spanning-tree">Spanning Tree</button></a>
-    <a href="/home/rupali/project2/broad-cast_routing/intro.html"><button id="intro">Back to Intro</button></a>
+    <a href="/pointToPoint.html"><button id="point-to-point">Point-to-Point Transmission</button></a>
+    <a href="/flooding.html"><button id="flooding">Flooding</button></a>
+    <a href="/spanningTree.html"><button id="spanning-tree">Spanning Tree</button></a>
+    <a href="/intro.html"><button id="intro">Back to Intro</button></a>
     
     
 </div>
