--- a/dijkstra_algo/index.html
+++ b/dijkstra_algo/index.html
@@ -95,14 +95,14 @@ button:hover {
     <div class="logo">Routing Algorithms</div>
     <nav>
         <ul>
-           <li><a class="nav_link" href="/project2/integration.html">Home</a></li>
-            <li><a class="nav_link" href="/project2/dijkstra_algo/intro.html">Dijkstra</a></li>
-            <li><a class="nav_link" href="/project2/distance-vector_routing/intro.html">Distance Vector</a></li>
-            <li><a class="nav_link" href="/project2/flooding/intro.html">Flooding</a></li>
-            <li><a class="nav_link" href="/project2/link-state_routing/intro.html">Link State</a></li>
-            <li><a class="nav_link" href="/project2/broad-cast_routing/intro.html">Broadcast</a></li>
-            <li><a class="nav_link" href="/project2/multi-state_routing/intro.html">Multicast</a></li>
-            <li><a class="nav_link" href="/project2/hierarchical-routing/intro.html">Hierarchical Routing</a></li>
+           <li><a class="nav_link" href="../integration.html">Home</a></li>
+            <li><a class="nav_link" href="../dijkstra_algo/intro.html">Dijkstra</a></li>
+            <li><a class="nav_link" href="../distance-vector_routing/intro.html">Distance Vector</a></li>
+            <li><a class="nav_link" href="../flooding/intro.html">Flooding</a></li>
+            <li><a class="nav_link" href="../link-state_routing/intro.html">Link State</a></li>
+            
+            <li><a class="nav_link" href="../multi-state_routing/intro.html">Multicast</a></li>
+            <li><a class="nav_link" href="../hierarchical-routing/intro.html">Hierarchical Routing</a></li>
     </nav>
 </header>
 <div id="navbar-placeholder"></div>
@@ -134,13 +134,13 @@ button:hover {
     <svg id="dynamic-graph" width="400" height="400"></svg>
    
 </div>
-<a href="/project2/dijkstra_algo/intro.html"><button id="intro">Back to Intro</button></a>
+<a href="./intro.html"><button id="intro">Back to Intro</button></a>
 <script src="https://d3js.org/d3.v7.min.js"></script>
 
 
 
 
-    <script src="script2.js"></script>
+    <script src="./script2.js"></script>
 
     
 </body>
