--- a/flooding/index.html
+++ b/flooding/index.html
@@ -108,14 +108,14 @@
     <div class="logo">Routing Algorithms</div>
     <nav>
         <ul>
-            <li><a class="nav_link" href="/home/rupali/project2/integration.html">Home</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/dijkstra_algo/intro.html">Dijkstra</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/distance-vector_routing/intro.html">Distance Vector</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/flooding/intro.html">Flooding</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/link-state_routing/intro.html">Link State</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/broad-cast_routing/intro.html">Broadcast</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/multi-state_routing/intro.html">Multicast</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/hierarchical-routing/intro.html">Hierarchical Routing</a></li>
+            <li><a class="nav_link" href="../integration.html">Home</a></li>
+            <li><a class="nav_link" href="../dijkstra_algo/intro.html">Dijkstra</a></li>
+            <li><a class="nav_link" href="../distance-vector_routing/intro.html">Distance Vector</a></li>
+            <li><a class="nav_link" href="/intro.html">Flooding</a></li>
+            <li><a class="nav_link" href="../link-state_routing/intro.html">Link State</a></li>
+            
+            <li><a class="nav_link" href="../multi-state_routing/intro.html">Multicast</a></li>
+            <li><a class="nav_link" href="../hierarchical-routing/intro.html">Hierarchical Routing</a></li>
         </ul>
     </nav>
 </header>
@@ -137,7 +137,7 @@
 <input id="initiator" placeholder="Enter start node" />
 <button id="start-flooding" disabled>Start Flooding</button>
 <p id="flooding-description" style="display: none;">Nodes do not send packets to links from where the packet has arrived</p>
-<a href="/home/rupali/project2/flooding/intro.html"><button id="intro">Back to Intro</button></a>
+<a href="/intro.html"><button id="intro">Back to Intro</button></a>
 <div id="description"></div>
 <button id="backStep" disabled>Back Step</button>
 <button id="nextStep" disabled>Next Step</button>
