--- a/dijkstra_algo/intro.html
+++ b/dijkstra_algo/intro.html
@@ -132,14 +132,14 @@
     <div class="logo">Routing Algorithms</div>
     <nav>
         <ul>
-             <li><a class="nav_link" href="/project2/integration.html">Home</a></li>
-            <li><a class="nav_link" href="/project2/dijkstra_algo/intro.html">Dijkstra</a></li>
-            <li><a class="nav_link" href="/project2/distance-vector_routing/intro.html">Distance Vector</a></li>
-            <li><a class="nav_link" href="/project2/flooding/intro.html">Flooding</a></li>
-            <li><a class="nav_link" href="/project2/link-state_routing/intro.html">Link State</a></li>
-            <li><a class="nav_link" href="/project2/broad-cast_routing/intro.html">Broadcast</a></li>
-            <li><a class="nav_link" href="/project2/multi-state_routing/intro.html">Multicast</a></li>
-            <li><a class="nav_link" href="/project2/hierarchical-routing/intro.html">Hierarchical Routing</a></li>
+             <li><a class="nav_link" href="../integration.html">Home</a></li>
+            <li><a class="nav_link" href="/intro.html">Dijkstra</a></li>
+            <li><a class="nav_link" href="../distance-vector_routing/intro.html">Distance Vector</a></li>
+            <li><a class="nav_link" href="../flooding/intro.html">Flooding</a></li>
+            <li><a class="nav_link" href="../link-state_routing/intro.html">Link State</a></li>
+            
+            <li><a class="nav_link" href="../multi-state_routing/intro.html">Multicast</a></li>
+            <li><a class="nav_link" href="../hierarchical-routing/intro.html">Hierarchical Routing</a></li>
         </ul>
     </nav>
 </header>
@@ -161,7 +161,7 @@
     </ul>
 
     <!-- Optional button for action -->
-    <a href="/project2/dijkstra_algo/index.html" class="btn-primary">Visualization</a>
+    <a href="./index.html" class="btn-primary">Visualization</a>
 </div>
 
 
