--- a/hierarchical-routing/index.html
+++ b/hierarchical-routing/index.html
@@ -13,15 +13,14 @@
     <div class="logo">Routing Algorithms</div>
     <nav>
         <ul>
+              <li><a class="nav_link" href="../integration.html">Home</a></li>
+            <li><a class="nav_link" href="../dijkstra_algo/intro.html">Dijkstra</a></li>
+            <li><a class="nav_link" href="../distance-vector_routing/intro.html">Distance Vector</a></li>
+            <li><a class="nav_link" href="../flooding/intro.html">Flooding</a></li>
+            <li><a class="nav_link" href="../link-state_routing/intro.html">Link State</a></li>
             
-            <li><a class="nav_link" href="/home/rupali/project2/integration.html">Home</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/dijkstra_algo/intro.html">Dijkstra</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/distance-vector_routing/intro.html">Distance Vector</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/flooding/intro.html">Flooding</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/link-state_routing/intro.html">Link State</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/broad-cast_routing/intro.html">Broadcast</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/multi-state_routing/intro.html">Multicast</a></li>
-            <li><a class="nav_link" href="/home/rupali/project2/hierarchical-routing/intro.html">Hierarchical Routing</a></li>
+            <li><a class="nav_link" href="../multi-state_routing/intro.html">Multicast</a></li>
+            <li><a class="nav_link" href="/intro.html">Hierarchical Routing</a></li>
         </ul>
     </nav>
 </header>
@@ -40,7 +39,7 @@
                 <svg id="dynamic-graph" width="800" height="600"></svg>
             </div>
         </div>
-<a href="/home/rupali/project2/hierarchical-routing/intro.html"><button id="intro">Back to Intro</button></a>
+<a href="intro.html"><button id="intro">Back to Intro</button></a>
         <!-- Control Panel -->
         <div id="control-panel">
             <h2>Control Panel</h2>
