--- a/integration.html
+++ b/integration.html
@@ -16,13 +16,13 @@
     <nav>
         <ul>
              <li><a class="nav_link" href="/integration.html">Home</a></li>
-            <li><a class="nav_link" href="/dijkstra_algo/intro.html">Dijkstra</a></li>
-            <li><a class="nav_link" href="/distance-vector_routing/intro.html">Distance Vector</a></li>
-            <li><a class="nav_link" href="/flooding/intro.html">Flooding</a></li>
-            <li><a class="nav_link" href="/link-state_routing/intro.html">Link State</a></li>
-            <li><a class="nav_link" href="/broad-cast_routing/intro.html">Broadcast</a></li>
-            <li><a class="nav_link" href="/multi-state_routing/intro.html">Multicast</a></li>
-            <li><a class="nav_link" href="/hierarchical-routing/intro.html">Hierarchical Routing</a></li>
+            <li><a class="nav_link" href="./dijkstra_algo/intro.html">Dijkstra</a></li>
+            <li><a class="nav_link" href="./distance-vector_routing/intro.html">Distance Vector</a></li>
+            <li><a class="nav_link" href="./flooding/intro.html">Flooding</a></li>
+            <li><a class="nav_link" href="./link-state_routing/intro.html">Link State</a></li>
+            
+            <li><a class="nav_link" href="./multi-state_routing/intro.html">Multicast</a></li>
+            <li><a class="nav_link" href="./hierarchical-routing/intro.html">Hierarchical Routing</a></li>
          </ul>
     </nav>
 </header>
