--- a/dijkstra_algo/index.html
+++ b/dijkstra_algo/index.html
@@ -95,7 +95,7 @@ button:hover {
     <div class="logo">Routing Algorithms</div>
     <nav>
         <ul>
-           <li><a class="nav_link" href="../integration.html">Home</a></li>
+           <li><a class="nav_link" href="../index.html">Home</a></li>
             <li><a class="nav_link" href="../dijkstra_algo/intro.html">Dijkstra</a></li>
             <li><a class="nav_link" href="../distance-vector_routing/intro.html">Distance Vector</a></li>
             <li><a class="nav_link" href="../flooding/intro.html">Flooding</a></li>
