--- a/distance-vector_routing/index2.html
+++ b/distance-vector_routing/index2.html
@@ -12,7 +12,7 @@
     <div class="logo">Routing Algorithms</div>
     <nav>
         <ul>
-             <li><a class="nav_link" href="../integration.html">Home</a></li>
+             <li><a class="nav_link" href="../index.html">Home</a></li>
             <li><a class="nav_link" href="../dijkstra_algo/intro.html">Dijkstra</a></li>
             <li><a class="nav_link" href="/intro.html">Distance Vector</a></li>
             <li><a class="nav_link" href="../flooding/intro.html">Flooding</a></li>
